Fix alignment issue with 'Add Coupon Code' button in WooCommerce Blocks checkout page (https://github.com/woocommerce/woocommerce-blocks/pull/9392)

--- a/plugins/woocommerce-blocks/assets/js/base/components/sidebar-layout/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/sidebar-layout/style.scss
@@ -49,15 +49,11 @@
 .is-large {
 	.wc-block-components-sidebar {
 		.wc-block-components-totals-item,
-		.wc-block-components-panel {
+		.wc-block-components-panel,
+		.wc-block-components-totals-coupon {
 			padding-left: $gap;
 			padding-right: $gap;
 		}
-		.wc-block-components-totals-coupon-link {
-			margin-left: $gap;
-			margin-right: $gap;
-		}
-
 		.wc-block-components-panel {
 			.wc-block-components-totals-item {
 				padding: 0;
